issue #33: fixed executing integration tests headless